# w1-hackathon

./: docker-compose.yml
.github/workflows/: deploy_api.yml
back/: .gitignore  Dockerfile  celery_app.py  entrypoint.sh  main.py  pyproject.toml  requirements.txt
back/alembic/: env.py
back/alembic/versions/: 14b4c61859c6_init.py  7b0154d6fea5_add_onboarding_flow_tables.py  a33d9034759c_move_document_responsability_to_.py  c3c1168eb6b6_init.py  d0024e3b4cff_.py  f8b841b9477a_add_conversation_onboarding_step_.py  fee8bee2ddff_new_tables.py
back/api/: dependencies.py
back/api/routes/: __init__.py  admin_documents.py  documents.py  holdings.py  llm_chat.py  onboarding.py  users.py
back/api/schemas/: document.py  holding.py  llm_chat.py  onboarding.py  user.py
back/core/: config.py  database.py  llm_chat.py  security.py  user_crud.py
back/core/holding/: document_service.py  holding_service.py
back/models/: __init__.py  asset.py  base.py  conversation.py  document.py  holding.py  onboarding.py  simulation.py  user.py
back/models/holding/: __init__.py  asset.py  chat.py  core.py  document.py  simulation.py  tracking.py
back/tasks/: document_tasks.py
front/: eslint.config.js  package.json  react-router.config.ts
front/app/: app.css  root.tsx  routes.ts
front/app/components/: app-sidebar.tsx  requires-auth.tsx
front/app/components/admin/: document-list.tsx
front/app/components/auth/: login-form.tsx  signup-form.tsx
front/app/contexts/: auth.tsx
front/app/hooks/: use-auth.ts  use-document.ts  use-documents.ts  use-holding.ts  use-llm-chat.ts  use-onboarding.ts
front/app/layouts/: protected.tsx
front/app/lib/: auth.ts  document-helper.ts  document.ts  format.ts  holding.ts  httpClient.ts  onboarding.ts
front/app/routes/: admin-dashboard.tsx  admin-documents.tsx  auth.tsx  dashboard.tsx  holding.tsx  home.tsx  login.tsx  lp.tsx  onboarding.tsx  signup.tsx
front/app/schemas/: auth.ts
front/app/services/: auth.ts  document.ts  llm-chat.ts  onboarding.ts
front/app/types/: document.ts  holding.ts  llm-chat.ts  onboarding.ts  user.ts
(+44 files in other folders)
